--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,22 +1,35 @@
 name: Linting
 
-on: [pull_request]
+on: [push]
 
 jobs:
-  pre-commit:
+  linting:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
           architecture: 'x64'
-
-      - name: Install pre-commit
-        run: pip install pre-commit
-
-      - name: Run pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-3.8-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      - name: Install suzieq
+        run: poetry install --no-interaction
+      - name: Run pylint
+        run: poetry run pylint suzieq/
+      - name: Run flake8
+        run: poetry run flake8
