Fix library install

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Install dependencies
       if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
       run: poetry install --no-interaction --no-root
+    - name: Install library
+      run: poetry install --no-interaction
     - name: Set up suzieq config
       run: cp build/suzieq-cfg-travis.yml suzieq-cfg.yml
     - name: Install pytest split
