--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Get durations from cache
       uses: actions/cache@v2
       with:
-        path: test_durations
+        path: .test_durations
         # artificial cache miss to always save at the end of the job and avoid out of sync test runs
         key: test-durations-split-${{ github.run_id }}-${{ github.run_number}}-${{ matrix.group }}
         restore-keys: |
